overflow fix

--- a/assets/_sass/_navbar.scss
+++ b/assets/_sass/_navbar.scss
@@ -62,6 +62,7 @@ $nav-item-border: darken($navbar-default-bg, 8%);
   .navbar {
     margin: 0;
     height: 100%;
+    overflow-y: hidden;
   }
 
   .navbar-nav {
